# AnonSuite

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ACCESSIBILITY_GUIDE.md  API_SPEC.md  ARCHITECTURE.md  CI_CD_FIX_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  Dockerfile  FINAL_10_10_USER_FEEDBACK.md  FINAL_USER_FEEDBACK_REPORT.md  GITHUB_UPLOAD_INSTRUCTIONS.md  IS_THIS_USABLE.md  LICENSE  Makefile  NEXT_ACTIONS.md  NEXT_STEPS.md  PROGRESS_LOG.md  PROJECT_COMPLETION_PLAN.md  PROJECT_COMPLETION_REPORT.md  README.md  REAL_WORLD_USAGE.md  SECURITY.md  SECURITY_MODEL.md  STATUS.md  SYSTEM_DESIGN.md  TESTING.md  USER_FEEDBACK_ITERATION_1.md  USER_FEEDBACK_REPORT.md  USER_RESEARCH_ANALYSIS.md  USER_TESTING_FEEDBACK_FINAL.md  USER_TESTING_SUMMARY.md  architect-state.json  docker-compose.yml  easy_install.sh  install.sh  pyproject.toml  pytest.ini  (+7 more)
.github/workflows/: ci.yml  main.yml
autobuild/: differentiators.md  final_report.md  identity.json  intake.md  prompt_ledger.md  state.json
autobuild/checkpoints/: design.md  implementation.md  scaffold.md
autobuild/modules/core/: plan.md
build-log/: dev-notes.md  enhancement-complete.md  final-completion-20241219.md  phase3-completion-report.md  phase4-completion-report.md  phase5-human-refactor-20241219.md
dev-tools/: debug_helper.py  network_monitor.py
docs/: README.md  api-reference.md  architecture.md  installation.md  project-brief.md  technical-architecture.md  troubleshooting.md  user-guide.md
infra/: Dockerfile  README.md  docker-compose.yml  k8s-deployment.yaml
patched_files/: CreateProxyProcess  CreateTorProcess  multitor
plugins/: sample_plugin.py
scenarios/: pentest_scenarios.md  sample_networks.json
scripts/: install.sh  performance_monitor.sh  start_phase2.py  verify_phase1.py
seed/: README.md  config.yaml  mac_vendors.json
seed/wordlists/: common_ssids.txt  common_wps_pins.txt  corporate_passwords.txt
src/: anonsuite.py  config_manager.py  config_manager_enhanced.py
src/anonsuite/: __init__.py  __main__.py  main.py
src/anonymity/: anonsuite  anonsuite.sh
src/anonymity/multitor/: CheckConn  CheckProxyProcess  CreateTorDirectory  CreateTorProcess  CreateWebProxyProcess  DestroyProcess  GetTorProcess  OutputGen  __init__  helpers  import  multitor  settings
src/wifi/: __init__.py  compile_pixiewps.sh  pixiewps_wrapper.py  run_pixiewps.sh  run_wifipumpkin.sh  wifi_scanner.py  wifipumpkin_wrapper.py
src/wifi/wifipumpkin3/: Dockerfile  requirements-dev.txt  requirements.txt
src/wifi/wifipumpkin3/.github/workflows/: build.yml
src/wifi/wifipumpkin3/tests/: test_config_extracaptiveflask.py  test_config_pumpkin_proxy.py  test_download_and_extract_extracaptiveflask.py  test_ui_dhcp_config.py
src/wifi/wifipumpkin3/wifipumpkin3/: __init__.py  __main__.py
src/wifi/wifipumpkin3/wifipumpkin3/core/common/: console.py  platforms.py  terminal.py  threads.py
src/wifi/wifipumpkin3/wifipumpkin3/core/config/globalimport/: __init__.py
src/wifi/wifipumpkin3/wifipumpkin3/core/controllers/: defaultcontroller.py  dhcpcontroller.py  mitmcontroller.py  proxycontroller.py  wirelessmodecontroller.py
src/wifi/wifipumpkin3/wifipumpkin3/core/packets/: dhcpserver.py  dnsserver.py  network.py
src/wifi/wifipumpkin3/wifipumpkin3/core/servers/dhcp/: dhcp.py  (+1 more)
src/wifi/wifipumpkin3/wifipumpkin3/core/ui/: uimode.py
src/wifi/wifipumpkin3/wifipumpkin3/core/utility/: constants.py
src/wifi/wifipumpkin3/wifipumpkin3/core/wirelessmode/: docker.py  karma.py  restapi.py  static.py  wirelessmode.py
src/wifi/wifipumpkin3/wifipumpkin3/extensions/: dhcpconf.py  dump.py  network.py
src/wifi/wifipumpkin3/wifipumpkin3/modules/misc/: custom_captiveflask.py  extra_captiveflask.py
src/wifi/wifipumpkin3/wifipumpkin3/modules/spoof/: dns_spoof.py
src/wifi/wifipumpkin3/wifipumpkin3/modules/wifi/: wifideauth.py  wifiscan.py
src/wifi/wifipumpkin3/wifipumpkin3/plugins/captiveflask/: plugin.py
src/wifi/wifipumpkin3/wifipumpkin3/plugins/pumpkinproxy/: downloadspoof.py
src/wifi/wifipumpkin3/wifipumpkin3/plugins/sniffkin3/: kerberos.py
tests/: README.md  TEST_SUITE_SUMMARY.md  conftest.py  run_tests.py  test_multitor_integration.py  test_multitor_simple.py  test_placeholder.py
tests/integration/: test_full_workflow.py  test_phase3_integration.py  test_phase4_integration.py  test_security_operations.py  test_system_integration.py
tests/security/: test_advanced_penetration.py  test_security_audit.py  test_security_features.py
tests/unit/: test_cli_integration.py  test_core.py  test_security_core.py  test_wifi_tools.py
(+10 files in other folders)
